2008-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind codepage-setup for Emacs 23.

2008-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Check if summary window
	exists.

2008-09-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-confirm-send): Fix version.

2008-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-idna-to-ascii-rhs-1): Use
	mail-extract-address-components rather than mail-header-parse-addresses
	that is an alias by default to ietf-drums-parse-addresses that does not
	support non-ASCII names in headers' contents.

2008-09-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): Fixed variable documentation to
	avoid the "y/n" wording.

2008-09-25  Francis Litterio  <flitterio@gmail.com>  (tiny change)

	* message.el (message-set-auto-save-file-name): Save to a different
	filename so multiple messages (especially drafts) can be recovered.

2008-09-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): Add appropriate version.

2008-09-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* mm-view.el (mm-pkcs7-enveloped-magic): Fix extra parenthesis in
	defvar.

2008-09-22  Daiki Ueno  <ueno@unixuser.org>

	* mm-view.el (mm-pkcs7-signed-magic): Use literals.
	(mm-pkcs7-enveloped-magic): Ditto.

2008-09-17  Simon Josefsson  <simon@josefsson.org>

	* sieve-manage.el (sieve-manage-is-string): Accept literals too.
	Reported by Arnt Gulbrandsen <arnt@oryx.com>.

2008-09-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-use-long-group-names): Make t the
	default, it's better.

2008-09-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-insert-line): Trap errors on setting the
	summary line gnus-number property and ignore them (with a warning
	message).

2008-09-08  David Engster  <dengste@eml.cc>

	* nnmairix.el (nnmairix-create-server-and-default-group): Require match