@@ -1,3 +1,12 @@
+2008-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* nnml.el (nnml-request-expire-articles): Check if the function set to
+	`nnmail-expiry-target' returns the symbol `delete'.
+
+	* nnfolder.el (nnfolder-request-expire-articles): Ditto.
+
+	* nnmail.el (nnmail-expiry-target): Fix custom type.
+
 2008-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lpath.el: Fbind codepage-setup for Emacs 23.
